<resources>
    <string name="app_name">Habit@</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="first_name_prompt">First Name</string>
    <string name="last_name_prompt">Last Name</string>
    <string name="next_step_button">Next Step</string>
    <string name="sign_in_btn">Sign In!</string>
    <string name="register_btn">Register!</string>
    <string name="title_activity_register_page_one">RegisterPageOneActivity</string>
    <string name="title_activity_register_page_two">RegisterPageTwoActivity</string>
    <string name="title_activity_register_page_three">RegisterPageThreeActivity</string>
    <string name="title_activity_register_page_four">RegisterPageFourActivity</string>
    <string name="title_activity_register_page_five">RegisterPageFiveActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

</resources>
