<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.habitatapi.habit.RegisterPageOneActivity"
    android:background="@mipmap/fall"
    android:id="@+id/register_layout_one"
    android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:radius="20dp"
            android:layout_marginTop="130dp"
            android:background="#a5111111">

            <AutoCompleteTextView android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="#6f323232"
                android:background="#fff"
                android:padding="10dp"
                android:layout_marginTop="0dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_password"
                android:maxLines="1"
                android:textColorHint="#6f323232"
                android:background="#fff"
                android:padding="10dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_password"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/retype_password"
                android:maxLines="1"
                android:textColorHint="#6f323232"
                android:background="#fff"
                android:padding="10dp"
                android:layout_marginTop="2dp"
                android:hint="@string/prompt_retype_password"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/first_name"
                android:maxLines="1"
                android:textColorHint="#6f323232"
                android:background="#fff"
                android:padding="10dp"
                android:layout_marginTop="2dp"
                android:hint="@string/first_name_prompt"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/last_name"
                android:maxLines="1"
                android:textColorHint="#6f323232"
                android:background="#fff"
                android:padding="10dp"
                android:layout_marginTop="2dp"
                android:hint="@string/last_name_prompt"
                android:fontFamily="sans-serif"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_step_button"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_button"
            android:radius="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:onClick="onClick" />

</LinearLayout>
